--- a/index.html
+++ b/index.html
@@ -1419,7 +1419,7 @@
                 <div class="container">
                     <div class="flex items-center flex-wrap lg:flex-nowrap lg:gap-x-4 xl:gap-x-24 gap-y-9 background lg:h-36 px-3 py-8 lg:py-0 lg:px-5 xl:px-11 text-white">
                         <div class="flex md:shrink-0 items-center gap-x-3 lg:gap-x-4 xl:gap-x-6">
-                            <img src="../images/club/diamond.png" class="w-[87px] lg:w-[100px] xl:w-[110px]">
+                            <img src="./images/club/diamond.png" class="w-[87px] lg:w-[100px] xl:w-[110px]">
                             <div>
                                 <h4 class="font-morabba-bold text-2xl md:text-5xl mb-2">کافی کلاب</h4>
                                 <p class="font-morabba-light text-lg md:text-2xl">میدونستی میتونی با امتیاز هات قهوه بگیری ؟</p>
